<resources>
    <string name="app_name">HealthPad</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">First Lastname</string>
    <string name="location">Cleveland, Ohio</string>
    <string name="email">useremail@gmail.com</string>
    <string name="age">25</string>
    <string name="height">175cm</string>
    <string name="weight">83kg</string>
    <string name="gender">male</string>
    <string name="home_second">Home Second</string>
    <string name="calories_under">1,860</string>
    <string name="calories_progress">80</string>
    <string name="calories_progress_m">20</string>
    <string name="calories_progress_tu">20</string>
    <string name="calories_progress_w">30</string>
    <string name="calories_progress_th">40</string>
    <string name="calories_progress_f">50</string>
    <string name="calories_progress_sat">60</string>
    <string name="calories_progress_sun">60</string>
    <string name="title_activity_social_fragment">SocialFragment</string>
    <string name="tab_text_1">Calories</string>
    <string name="tab_text_2">Nutrients</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="breakfast_calorie_available">230</string>
    <string name="breakfast_calorie_total">320</string>
    <string name="lunch_calorie_available">230</string>
    <string name="lunch_calorie_total">320</string>
    <string name="dinner_calorie_available">230</string>
    <string name="dinner_calorie_total">320</string>
    <string name="food_calorie">105</string>
    <string name="total_fat">14.3g</string>
    <string name="sat_fat">4.7g</string>
    <string name="cholest">558mg</string>
    <string name="sodium">213mg</string>
    <string name="carb">1.1g</string>
    <string name="protein">18.8g</string>
    <string name="fiber">0g</string>
    <string name="sugars">0.6g</string>


    <string-array name= "measurements">
        <item>Each</item>
        <item>Grams</item>
        <item>Pounds</item>
        <item>Ounces</item>
        <item>ML</item>
        <item>L</item>

    </string-array>



    <string-array name= "foods">
        <item>eggs</item>
        <item>bacon</item>
        <item>milk</item>
        <item>hamburger</item>
    </string-array>

    <string-array name="description">
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
    </string-array>

</resources>
