<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/nutrition_upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <com.github.mikephil.charting.charts.PieChart
           android:id="@+id/nutrition_pie"
           android:layout_width="300dp"
           android:layout_height="300dp"
           android:layout_centerHorizontal="true"
           />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nutrition_under"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/nutrition_upper">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Weekly Nutrition"
                android:textSize="20dp"
                android:textAlignment="center"
                />

            <RelativeLayout
                android:id="@+id/nut_charts_mixed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp">

                <ProgressBar
                    android:id="@+id/calorie_chart_m"
                    android:layout_width="40dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="8dp"
                    style="?android:progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/vertical"
                    android:progress="@string/calories_progress_m"/>

                <ProgressBar
                    android:id="@+id/calorie_chart_tu"
                    android:layout_width="40dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="8dp"
                    style="?android:progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/vertical"
                    android:progress="@string/calories_progress_tu"
                    android:layout_toRightOf="@id/calorie_chart_m" />

                <ProgressBar
                    android:id="@+id/calorie_chart_w"
                    android:layout_width="40dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="8dp"
                    style="?android:progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/vertical"
                    android:progress="@string/calories_progress_w"
                    android:layout_toRightOf="@id/calorie_chart_tu"/>

                <ProgressBar
                    android:id="@+id/calorie_chart_th"
                    android:layout_width="40dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="8dp"
                    style="?android:progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/vertical"
                    android:progress="@string/calories_progress_th"
                    android:layout_toRightOf="@id/calorie_chart_w"/>

                <ProgressBar
                    android:id="@+id/calorie_chart_f"
                    android:layout_width="40dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="8dp"
                    style="?android:progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/vertical"
                    android:progress="@string/calories_progress_f"
                    android:layout_toRightOf="@id/calorie_chart_th"/>

                <ProgressBar
                    android:id="@+id/calorie_chart_sat"
                    android:layout_width="40dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="8dp"
                    style="?android:progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/vertical"
                    android:progress="@string/calories_progress_sat"
                    android:layout_toRightOf="@id/calorie_chart_f"/>

                <ProgressBar
                    android:id="@+id/calorie_chart_sun"
                    android:layout_width="40dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="8dp"
                    style="?android:progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/vertical"
                    android:progress="@string/calories_progress_sun"
                    android:layout_toRightOf="@id/calorie_chart_sat"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </RelativeLayout>



            </RelativeLayout>

        </LinearLayout>









    </RelativeLayout>






</RelativeLayout>